# cloudlife

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  acidwarp.cpp  acidwarp.h  acidworm.cpp  acidworm.h  art.cpp  art.hpp  artfactory.cpp  artfactory.h  attractor.cpp  attractor.h  cloudlife.cpp  cloudlife.hpp  discrete.cpp  discrete.h  easel.h  easelcompute.cpp  easelcompute.h  easelplane.cpp  easelplane.h  easelvertex.cpp  easelvertex.h  gaterecorder.cpp  hopalong.cpp  hopalong.h  ifs.cpp  ifs.h  imgui_elements.cpp  imgui_elements.h  main.cpp  mtron.cpp  mtron.hpp  onepixel.h  pixelbuffer.h  plasmacompute.cpp  plasmacompute.h  (+16 more)
.github/workflows/: cmake.yml  windows.yml
acidwarp/: acidwarp.c  acidwarp.c~  acidwarp.h  handy.h  rolnfade.c
arχiv/: sphere-of-cubes.txt
arχiv/acidworm-0.2/: BUGS  CHANGES  HISTORY  Makefile  README  TODO  acidworm-0.2.lsm  acidworm.c
arχiv/xscreensaver/hacks/: binaryhorizon.c
arχiv/xscreensaver/utils/: Makefile
cmake/modules/: FindGlad.cmake
src/arts/: acidwarp.cpp  acidworm.cpp  attractor.cpp  cloudlife.cpp  cloudlife.hpp  discrete.cpp  discrete.h  hopalong.cpp  hopalong.h  ifs.cpp  mtron.cpp  plasmacompute.cpp  plasmacompute.h  sphereofcubes.cpp  strange.hpp  test3d.cpp  test3d.hpp  thornbird.cpp  vermiculate.cpp  vermiculate.h
src/arts/acidwarp/: acidwarp.c
src/core/: art.cpp  art.hpp  artfactory.cpp
src/render/: easel.h  easelcompute.cpp  easelcompute.h  easelplane.cpp  easelplane.h  easelvertex.cpp  easelvertex.h  easelvertex3d.cpp  easelvertex3d.h  gl_debug.h  gl_state.h  vertexbuffer.cpp  vertexbuffer.h
src/utils/: imgui_elements.cpp  imgui_elements.h  screenshot.cpp  screenshot.hpp  settings.cpp  timer.cpp  timer.h
